--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.1" />
+    <PackageReference Include="InputSimulator" Version="1.0.4" />
   </ItemGroup>
 
 </Project>
